# blame-browse

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  meson.build
data/: Makefile.am  main-win-ui.xml
src/: Makefile.am  blamebrowse.gresource.xml  commit-dialog.ui  git-annotated-source.c  git-annotated-source.h  git-application.c  git-application.h  git-commit-bag.c  git-commit-bag.h  git-commit-dialog.c  git-commit-dialog.h  git-commit-link-button.c  git-commit-link-button.h  git-commit.c  git-commit.h  git-common.c  git-common.h  git-enum-types.c.in  git-enum-types.h.in  git-hash-view.c  git-hash-view.h  git-main-window.c  git-main-window.h  git-marshal.list  git-reader.c  git-reader.h  git-source-view.c  git-source-view.h  intl.h  main.c  menu.ui  meson.build  source-view.ui  window.ui
